2006-08-29  Wu Zhou  <woodzltc@cn.ibm.com>

	* bootstrap.sh: Build libunwind unconditionally.

2006-08-17  Yao Qi  <qiyaoltc@cn.ibm.com>

	* lib/opcodes/libbfd_get.c : New file to stub bfd_getb32 and bfd_getl32
	on PPC64.
	* Makefile.am : Add lib/opcodes/libbfd_get.a to noinst_LIBRARIES.

2006-07-31  Yao Qi  <qiyaoltc@cn.ibm.com>

	* bootstrap.sh: Build libunwind if it is supported.

2006-07-21  Nurdin Premji  <npremji@redhat.com>

	* .cvsignore: Ignoring
	config.guess
	config.sub

2006-07-13  Stepan Kasal  <kasal@ucw.cz>

	* bootstrap.sh: Run autoheader in libunwind, autoconf in antlr..
	* antlr/configure, libunwind/include/config.h.in, libunwind/aclocal.m4:
	* elfutils/configure, elfutils/aclocal.m4, libunwind/configure: Delete.

2006-07-12  Rick Moseley  <rmoseley@redhat.com>

	* Makefile.am: Remove libunwind-ptrace.a.

2006-07-12  Stepan Kasal  <kasal@ucw.cz>

	* elfutils/config.h.in: Delete.
	* bootstrap.sh: Run autoheader in elfutils.

2006-07-11  Rick Moseley <rmoseley@redhat.com>

	* Makefile.am: Remove generic libunwind.a lib.

2006-07-11  Adam Jocksch  <ajocksch@redhat.com>

	* lib/unwind: Added.

2006-07-10  Rick Moseley <rmoseley@redhat.com>

	* Makefile.am: Remove libunwind-setjmp.a for now.

2006-06-30  Stepan Kasal  <kasal@ucw.cz>

	* configure.ac: Remove the code deciding whether to use libunwind,
	it is in common/m4/frysk-use-libunwind.m4 now.  Add conditional
	whether libunwind can undertake "make check".  And some cosmetics.
	Include common/acinclude.m4 before AM_INIT_AUTOMAKE.
	* Makefile.am: Clean up the code for libunwind; add hack to skip
	"make check" there.

2006-06-29  Stepan Kasal  <kasal@ucw.cz>

	* bootstrap.sh: Do not run automake in libunwind, it doesn't use it.

2006-06-28  Rick Moseley  <rmoseley@redhat.com>

	* bootstrap.sh: Added libunwind.
	* configure.ac: Ditto.
	* Makefile.am: Ditto.
	* libunwind/configure.ac: Added macro so autogen.sh would work.

2006-06-26  Ivan Pantuyev  <ipantuye@redhat.com>
